--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Rock Paper Scissors</title>
-        <script src="javascript.js"></script>
+        <script src="javascript.js" defer></script>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
