Add Score Keeping - create global variables for scores - unable to find way to keep score variables local - remove buttons and rps icons when game is quit

--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
         </header>
         
         <main>
+            <div id="filler"></div>
             <div class="game-screen">
            <h2 class="ready">Are You Ready?</h2>
            <button id="start" type="button">START</button>
             </div>
+           <div id="score-container"></div>
         </main>
    
         <footer>
